--- a/css/simple-siderbar.css
+++ b/css/simple-siderbar.css
@@ -15,7 +15,16 @@ li{
     transition: all 0.5s ease;
 }
 
-
+.well{
+    margin-top: 83;
+    vertical-align: middle;
+}
+.card{
+    vertical-align: middle;
+}
+.img-fluid{
+    vertical-align: middle;
+}
 #sidebar-wrapper {
     z-index: 1000;
     position: fixed;
