--- a/css/details.css
+++ b/css/details.css
@@ -8,5 +8,14 @@ ul {
 }
 
 .avatar {
-    border-radius: 20px;
+    border-radius: 50px;
+}
+
+.btn-circle.btn-lg {
+  width: 50px;
+  height: 50px;
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 30px;
 }
