agregado los iconos de like, fav y unlike
Se agrega fav, like, unlike y también se agregan viñetas

--- a/css/index/header.css
+++ b/css/index/header.css
@@ -20,3 +20,12 @@
     color: white;
     margin-left: 25px;
 }
+/*
+ div button {
+    width: 490px;
+}
+*/
+@media (min-width: 992px)
+.col-md-2 {
+    width: 128px;
+}
