--- a/css/details.css
+++ b/css/details.css
@@ -38,32 +38,6 @@ ul {
     border-radius: 20px;
 }
 
-#autor {
-    border-radius: 20px;
-    background-color: white;
-    border: 1px grey solid;
-}
-//
-
-.fb-image-profile
-{
-    margin: -90px 10px 0px 50px;
-    z-index: 9;
-    width: 20%;
-}
-
-@media (max-width:768px)
-{
-
-.fb-profile-text>h1{
-    font-weight: 700;
-    font-size:16px;
-}
-
-.fb-image-profile
-{
-    margin: -45px 10px 0px 25px;
-    z-index: 9;
-    width: 20%;
-}
+.autor {
+    background-color: transparent;
 }
