mezcla-Jose-Randall

--- a/css-based-on-template/details/details.css
+++ b/css-based-on-template/details/details.css
@@ -41,3 +41,18 @@ ul {
 .autor {
     background-color: transparent;
 }
+.img-rounded {
+    margin: auto;
+}
+#icons-social {
+    text-align:center;
+}
+
+.btn-circle.btn-xl {
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  font-size: 24px;
+  line-height: 1.33;
+  border-radius: 35px;
+}
