--- a/css-based-on-template/details/details.css
+++ b/css-based-on-template/details/details.css
@@ -11,6 +11,12 @@ ul {
     border-radius: 100px;
 }
 
+.avatarUsuario {
+    width: 50%;
+    margin: auto;
+    border-radius: 50px;
+}
+
 .btn-circle.btn-lg {
   width: 50px;
   height: 50px;
