--- a/css-based-on-template/index/index.css
+++ b/css-based-on-template/index/index.css
@@ -1,6 +1,11 @@
 .img-responsive {
     margin: auto;
 }
+
+.jumbotron {
+    /*background-color: white;*/
+}
+
 .jumbotron > h1 {
     text-align: center;
 }
@@ -22,4 +27,8 @@
 #btn-login {
     display: block;
     background-color: black;
+}
+
+#page-wrapper {
+    background-color: #f5f5f5;
 }
