Modifiado el perfíl y estilos

--- a/css-based-on-template/index/index.css
+++ b/css-based-on-template/index/index.css
@@ -3,7 +3,9 @@
 }
 
 .jumbotron {
-    /*background-color: white;*/
+    /*background-color: #1abc9c;*/
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding-top: 5px;
 }
 
 .jumbotron > h1 {
@@ -19,7 +21,7 @@
 }
 .jumbotron {
     padding-right: 150px;
-    padding-left: 150px;
+    padding-left: 5px;
 }
 .jumbotron > .img-responsive{
     padding-bottom: 25px
