Adaptación al nuevo template
Adaptación de las páginas al nuevo template (SB-Admin)

--- a/css-based-on-template/index/index.css
+++ b/css-based-on-template/index/index.css
@@ -26,9 +26,11 @@
 .jumbotron > .img-responsive{
     padding-bottom: 25px
 }
+#btn-login {
+    display: block;
+    background-color: black;
+}
 
 #page-wrapper {
     background-color: #f5f5f5;
 }
-
-
