--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/index.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/index.html
@@ -11,8 +11,8 @@
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom CSS -->
-    <link href="css-based-on-template/sb-admin.css" rel="stylesheet">
-    <link href="css-based-on-template/index/index.css" rel="stylesheet">
+    <link href="css-based-on-template/sb-admin.css" rel="stylesheet" type="text/css">
+    <link href="css-based-on-template/index/index.css" rel="stylesheet" type="text/css">
     <link href="css-based-on-template/navbar.css" rel="stylesheet" type="text/css">
     <!-- Custom Fonts -->
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -63,16 +63,16 @@
                     <div class="col-md-9">
                         {{#vinetas}}
                         <div class="jumbotron">
-                            <p>Autor: <small><a href="#">{{autor}}</a></small></p>
+                            <p>Autor: <small><a href="#">{{autor.username}}</a></small></p>
                             <h1>{{titulo}}</h1>
-                            <img class="img-responsive" src="{{Url}}">
+                            <img class="img-responsive" src="{{URL}}">
                             <p>{{descripcion}}</p>
-                            <div id="categoria" class=""><small>Categoria: <a href="/tag/{{tag}}">{{tag}}</a></small></div>
+                            <div id="categoria" class=""><small>Categoria: {{#vinetas.tags}} <a href="/tag/{{nombre}}">{{nombre}}</a> {{/vinetas.tags}} </small></div>
                             <div id="social" class="row">
                                 <hr>
                                 <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
                                 <a href="/vineta/{{id}}">
-                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">{{nComentatios}}</span></button>
+                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i></button>
                                 </a>
                                 <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
                                     <div class="badge">0</div>
