restricción a solo metido post para login y registro

--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/detalles.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/detalles.html
@@ -83,7 +83,7 @@
                             <div id="meme" class="row">
                                 <div class="col-md-10">
                                     <div class="card"> 
-                                        <img class="card-img-top img-rounded img-responsive" src="{{vineta.Url}}" alt="kek">
+                                        <img class="card-img-top img-rounded img-responsive" src="{{vineta.URL}}" alt="kek">
                                         <div class="card-block text-center">
                                             <h2>{{vineta.titulo}}</h2>
                                             <p class="card-text text-center">{{vineta.descripcion}}</p>
@@ -99,7 +99,7 @@
                                                     <div id="autor" class="card text-center"> 
                                                         <img id="avatarAutor" class="card-img-top img-responsive img-center" src="https://pbs.twimg.com/profile_images/648889317503336449/MU7PrqD_.jpg">
                                                         <div class="card-block">
-                                                            <h3 class="card-title">{{vineta.autor}}</h3>
+                                                            <h3 class="card-title">{{vineta.autor.username}}</h3>
                                                             <button class="btn btn-sm"><i class="fa fa-check" aria-hidden="true"></i> Le sigues</button>
                                                         </div>
                                                     </div>
