--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/index.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/index.html
@@ -74,12 +74,17 @@
                                 <a href="/vineta/{{id}}">
                                     <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i></button>
                                 </a>
-                                <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                                    <div class="badge">0</div>
+                                
+                                <button type="button" onclick="location.href='/likevineta/{{id}}'"  class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
+                                    <div class="badge">{{likes}}</div>
                                 </button>
-                                <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                                    <div class="badge">0</div>
+                                
+                                <Form action = dislikevineta/{{id}}>
+                                <button type="submit" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
+                                    <div class="badge">{{dislikes}}</div>
                                 </button>
+                                </Form>
+                                
                                 <br>
                                 <br> 
                             </div>
