--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/perfil.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/perfil.html
@@ -9,14 +9,14 @@
     <meta name="author" content="">
     <title>Cuánto meme!</title>
     <!-- Bootstrap Core CSS -->
-    <link href="css-based-on-template/bootstrap.min.css" rel="stylesheet">
+    <link href="/css-based-on-template/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="css-based-on-template/sb-admin.css" rel="stylesheet">
-    <link href="css-based-on-template/navbar.css" rel="stylesheet" type="text/css">
+    <link href="/css-based-on-template/sb-admin.css" rel="stylesheet">
+    <link href="/css-based-on-template/navbar.css" rel="stylesheet" type="text/css">
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="css-based-on-template/perfil/dashboard.css" rel="stylesheet" type="text/css">
-    <link href="css-based-on-template/perfil/perfil.css" rel="stylesheet" type="text/css">
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/css-based-on-template/perfil/dashboard.css" rel="stylesheet" type="text/css">
+    <link href="/css-based-on-template/perfil/perfil.css" rel="stylesheet" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -65,6 +65,7 @@
             </div>
             <!-- /.navbar-collapse -->
         </nav>
+    </div>
         <div id="page-wrapper">
             <div class="container-fluid">
                 <!-- Page Heading -->
@@ -238,9 +239,9 @@
     </div>
     <!-- /#wrapper -->
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="../static/js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
 </body>
 
 </html>
