--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/index.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/index.html
@@ -11,14 +11,12 @@
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom CSS -->
-    <link href="css-based-on-template/sb-admin.css" rel="stylesheet" type="text/css">
-    <link href="css-based-on-template/index/index.css" rel="stylesheet" type="text/css">
-    <link href="css-based-on-template/navbar.css" rel="stylesheet" type="text/css">
+    <link href="/css/index.css" rel="stylesheet" type="text/css">
+    <link href="/css-based-on-template/sb-admin.css" rel="stylesheet" type="text/css">
+    <link href="/css-based-on-template/navbar.css" rel="stylesheet" type="text/css">
     <!-- Custom Fonts -->
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <script src="//cdn.auth0.com/js/lock/10.3.0/lock.min.js"></script>
-    <script src="auth0-variables.js"></script>
-    <script src="app.js"></script>
+
 </head>
 
 <body>
@@ -100,9 +98,9 @@
     </div>
     <!-- /#wrapper -->
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="/js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 
 </html>
