--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/login.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/login.html
@@ -7,6 +7,7 @@
  <p>Password</p>
   <input type='password' name='password'/> 
   <input type='submit' value='Login'/>
+  <input type="hidden" name="_csrf" value="{{token}}"/>
 </form>
 </body>
 </html>
