--- a/CuantoMeme2.0/static/css-based-on-template/navbar.css
+++ b/CuantoMeme2.0/static/css-based-on-template/navbar.css
@@ -3,7 +3,7 @@
     margin-top: -10px;
     width: 300px;
     height: 75px;
-    background-image: url(/img/logo/logo4.png);
+    background-image: url(../css-based-on-template/logo/logo4.png);
     background-size: contain;
     background-repeat: no-repeat;
 }
