--- a/CuantoMeme2.0/templates/detalles.html
+++ b/CuantoMeme2.0/templates/detalles.html
@@ -11,11 +11,12 @@
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom CSS -->
-    <link href="css-based-on-template/sb-admin.css" rel="stylesheet">
-    <link href="css-based-on-template/details/details.css" rel="stylesheet">
+    <link href="/css-based-on-template/sb-admin.css" rel="stylesheet">
+    <link href="static/css-based-on-template/details/details.css" rel="stylesheet">
+
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="css-based-on-template/navbar.css" rel="stylesheet" type="text/css">
+    <link href="static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="static/css-based-on-template/navbar.css" rel="stylesheet" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -83,7 +84,7 @@
                             <div id="meme" class="row">
                                 <div class="col-md-10">
                                     <div class="card"> 
-                                        <img class="card-img-top img-rounded img-responsive" src="{{vineta.Url}}" alt="kek">
+                                        <img class="card-img-top img-rounded img-responsive" src="{{vineta.URL}}" alt="kek">
                                         <div class="card-block text-center">
                                             <h2>{{vineta.titulo}}</h2>
                                             <p class="card-text text-center">{{vineta.descripcion}}</p>
@@ -99,7 +100,7 @@
                                                     <div id="autor" class="card text-center"> 
                                                         <img id="avatarAutor" class="card-img-top img-responsive img-center" src="https://pbs.twimg.com/profile_images/648889317503336449/MU7PrqD_.jpg">
                                                         <div class="card-block">
-                                                            <h3 class="card-title">{{vineta.autor}}</h3>
+                                                            <h3 class="card-title">{{vineta.autor.username}}</h3>
                                                             <button class="btn btn-sm"><i class="fa fa-check" aria-hidden="true"></i> Le sigues</button>
                                                         </div>
                                                     </div>
@@ -115,28 +116,39 @@
                                 <div class="col-md-10">
                                     <hr>
                                     <div id="icons-social">
-                                        <button type="button" class="btn btn-warning btn-circle btn-xl"><span class="fa fa-star" aria-hidden="true"></span></button>
-                                        <button type="button" class="btn btn-success btn-circle btn-xl"><i class="fa fa-thumbs-up"></i>
-                                            <div class="badge">30</div>
-                                        </button>
-                                        <button type="button" class="btn btn-danger btn-circle btn-xl"><i class="fa fa-thumbs-down"></i>
-                                            <div class="badge">5</div>
-                                        </button>
-                                        <br>
-                                        <br> </div>
+										<button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                                		<a href="/vineta/{{id}}">
+                                    		<button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i></button>
+                                		</a>
+                                
+                                		<button type="button" onclick="location.href='/likevineta/{{id}}'"  class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
+                                    		<div class="badge">
+                                    			{{vineta.likes}}
+                                    		</div>
+                                		</button>
+                                
+                                <Form action = dislikevineta/{{id}}>
+                                <button type="submit" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
+                                    <div class="badge">{{vineta.dislikes}}</div>
+                                </button>
+                                </Form>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <legend>Comentar</legend>
                                 <!-- Añadir comentario -->
                                 <div class="input-group">
-                                    <input class="form-control" placeholder="¿Qué tienes que decir?" type="text"> <span class="input-group-addon">
+                                <form action="/crearComentario/vineta/{{id}}" method=post>
+                                    <input class="form-control" placeholder="¿Qué tienes que decir?" type="text" name="comentario"> <span class="input-group-addon">
                                         <button type="submit"><i class="glyphicon glyphicon-pencil"></i> Enviar</button>
-                                    </span> </div>
-                                <br> </div>
+                                    </span> 
+                                </form>
+                                  </div>
+                               	 <br> 
+                              </div>
                             <div id="comentarios" class="row">
                                 <legend>Comentarios
-                                    <div class="badge">{{vineta.nComentatios}}</div>
                                 </legend>
                                 <ul class="ListaComentatios">
                                     {{#vineta.comentarios}}
@@ -147,8 +159,8 @@
                                                     <a href="#"><img class="avatar" src="http://i2.kym-cdn.com/photos/images/facebook/000/926/994/729.gif" height="65px" width="65px"></a>
                                                 </div>
                                                 <div class="col-md-11">
-                                                    <small>{{Autor}}</small>
-                                                    <div class="well ComentarioTexto">{{Comentario}}</div>
+                                                    <small>{{autor_comentario.username}}</small>
+                                                    <div class="well ComentarioTexto">{{comentario}}</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -166,9 +178,9 @@
     </div>
     <!-- /#wrapper -->
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="/js/jquery.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 
 </html>
