--- a/CuantoMeme2.0/templates/perfil.html
+++ b/CuantoMeme2.0/templates/perfil.html
@@ -65,6 +65,7 @@
             </div>
             <!-- /.navbar-collapse -->
         </nav>
+    </div>
         <div id="page-wrapper">
             <div class="container-fluid">
                 <!-- Page Heading -->
@@ -73,43 +74,98 @@
                     <legend>Resumen de la cuenta</legend>
                 </div>
                 <div class="row">
-                    <div class="col-md-3 text-center"> <img class="img-responsive avatar-sombra" src="https://pbs.twimg.com/media/CJW_r5TWIAE0Zbn.png">
-                        <h2 class="">{{usuario.username}}</h2>
-                        <p><i class="fa fa-envelope-o" aria-hidden="true"></i> {{usuario.email}} </p>
+                    <div class="col-md-3 text-center"> <img class="img-responsive avatar-sombra" src="{{usuario.avatarUrl}}">
+                        <h2 class="">{{usuario.nombre}}</h2>
+                        <p><i class="fa fa-envelope-o" aria-hidden="true"></i>{{usuario.email}}</p>
                     </div>
                     <div class="col-md-9">
                         <ul class="nav nav-tabs">
+                            <li class="active"><a data-toggle="tab" href="#seguidos">Seguidos</a></li>
+                            <li><a data-toggle="tab" href="#vinetas">Viñetas de seguidos</a></li>
                             <li><a data-toggle="tab" href="#favoritas">Viñetas favoritas</a></li>
                             <li><a data-toggle="tab" href="#publicadas">Viñetas publicadas</a></li>
                             <li><a data-toggle="tab" href="#publicar">Publicar una viñeta</a></li>
                             <li><a data-toggle="tab" href="#buscar">Buscar una viñeta</a></li>
                         </ul>
                         <div class="tab-content">
+                            <div id="seguidos" class="tab-pane fade in active">
+                                <h3>Gente a la que sigues <span class="badge">4</span></h3>
+                                <hr>
+                                <div class="col-md-4">
+                                    {{#usuariosSeguidos}}
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <a href="#"><img class="media-object avatar" src="{{avatarUrl}}" alt="{{nombre}} avatar"></a>
+                                        </div>
+                                        <div class="media-body">
+                                            <h4 class="media-heading">{{nombre}}</h4>
+                                            <button class="btn btn-sm">Dejar de seguir</button>
+                                        </div>
+                                    </div>
+                                    {{/usuariosSeguidos}}
+                                </div>
+                            </div>
+                            <div id="vinetas" class="tab-pane fade">
+                                <h3>Viñetas de gente a la que sigues <span class="badge">3</span></h3>
+                                <hr>
+                                <div class="container-fluid">
+                                    <div class="col-md-9">
+                                        {{#vinetasSeguidores}}
+                                        <div class="jumbotron">
+                                            <p>Autor: <small><a href="#">{{autor}}</a></small></p>
+                                            <h1>{{titulo}}</h1> <img class="img-responsive" src="{{Url}}">
+                                            <p>{{descripcion}}</p>
+                                            <div id="categoria" class=""><small>Tags: <a href="/tag/{{tag}}">{{tag}}</a></small></div>
+                                            <div id="social" class="row">
+                                                <hr>
+                                                <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                                                <a href="details2.html">
+                                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
+                                                </a>
+                                                <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
+                                                    <div class="badge">30</div>
+                                                </button>
+                                                <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
+                                                    <div class="badge">5</div>
+                                                </button>
+                                                <br>
+                                                <br>
+                                            </div>
+                                        </div>
+                                        {{/vinetasSeguidores}}
+                                    </div>
+                                    <div class="col-md-3"></div>
+                                </div>
+                            </div>
                             <div id="favoritas" class="tab-pane fade">
                                 <h3>Viñetas favoritas <span class="badge">3</span></h3>
                                 <hr>
                                 <div class="container-fluid">
-                                    <div class="col-md-9"> {{#favoritas}}
+                                    <div class="col-md-9">
+                                        {{#favoritas}}
                                         <div class="jumbotron">
-                                            <p>Autor: <small><a href="/perfil/{{autor.id}}">{{autor.username}}</a></small></p>
-                                            <h1>{{titulo}}</h1> <img class="img-responsive" src="{{URL}}">
+                                            <p>Autor: <small><a href="#">{{autor}}</a></small></p>
+                                            <h1>{{titulo}}</h1> <img class="img-responsive" src="{{Url}}">
                                             <p>{{descripcion}}</p>
-                                            <div id="categoria" class=""><small>Categoria: {{#tags}} <a href="/tag/{{nombre}}">{{nombre}}</a> {{/tags}} </small></div>
+                                            <div id="categoria" class=""><small>Tags: <a href="/tag/{{tag}}">{{tag}}</a></small></div>
                                             <div id="social" class="row">
                                                 <hr>
                                                 <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
-                                                <a href="/vineta/{{id}}">
-                                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i></button>
+                                                <a href="details2.html">
+                                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
                                                 </a>
                                                 <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                                                    <div class="badge">0</div>
+                                                    <div class="badge">30</div>
                                                 </button>
                                                 <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                                                    <div class="badge">0</div>
+                                                    <div class="badge">5</div>
                                                 </button>
                                                 <br>
-                                                <br> </div>
-                                        </div> {{/favoritas}} </div>
+                                                <br>
+                                            </div>
+                                        </div>
+                                        {{/favoritas}}
+                                    </div>
                                     <div class="col-md-3"></div>
                                 </div>
                             </div>
@@ -117,73 +173,75 @@
                                 <h3>Viñetas publicadas por ti <span class="badge">3</span></h3>
                                 <hr>
                                 <div class="container-fluid">
-                                    <div class="col-md-9"> {{#publicadas}}
+                                    <div class="col-md-9">
+                                        {{#publicadas}}
                                         <div class="jumbotron">
-                                            <p>Autor: <small><a href="/perfil/{{autor.id}}">{{autor.username}}</a></small></p>
-                                            <h1>{{titulo}}</h1> <img class="img-responsive" src="{{URL}}">
+                                            <p>Autor: <small><a href="#">{{autor}}</a></small></p>
+                                            <h1>{{titulo}}</h1> <img class="img-responsive" src="{{Url}}">
                                             <p>{{descripcion}}</p>
-                                            <div id="categoria" class=""><small>Categoria: {{#tags}} <a href="/tag/{{nombre}}">{{nombre}}</a> {{/tags}} </small></div>
+                                            <div id="categoria" class=""><small>Tags: <a href="/tag/{{tag}}">{{tag}}</a></small></div>
                                             <div id="social" class="row">
                                                 <hr>
                                                 <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
-                                                <a href="/vineta/{{id}}">
-                                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i></button>
+                                                <a href="details2.html">
+                                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
                                                 </a>
                                                 <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                                                    <div class="badge">0</div>
+                                                    <div class="badge">30</div>
                                                 </button>
                                                 <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                                                    <div class="badge">0</div>
+                                                    <div class="badge">5</div>
                                                 </button>
                                                 <br>
-                                                <br> </div>
-                                        </div> {{/publicadas}}
-                                        <div class="col-md-3"></div>
-                                    </div>
-                                </div>
-                                <div id="publicar" class="tab-pane fade in active">
-                                    <br>
-                                    <legend>¡Publica tu propia viñeta!</legend>
-                                    <form action="/subida" method="POST" enctype="application/x-www-form-urlencoded">
-                                        <label for="fname">Título</label>
-                                        <input type="text" id="fname" name="titulo">
-                                        <label for="lname">Comentario</label>
-                                        <input type="text" id="lname" name="descripcion">
-                                        <!--<label for="country">Tags</label>
-                                        <input type="text" id="tags" name="tags">-->
-                                        <label>Imagen:</label>
-                                        <input type="file" name="file">
-                                        <input type="submit" value="Submit"> </form>
-                                </div>
-                                <div id="buscar" class="tab-pane fade">
-                                    <h2>Búsqueda</h2>
-                                    <div>
-                                        <div class="input-group col-md-12">
-                                            <input type="text" class="form-control input-lg" placeholder="¿Qué viñeta quieres buscar?" />
-                                            <select>
-                                                <option value="titulo">Buscar por título</option>
-                                                <option value="autor">Buscar por autor</option>
-                                                <option value="tags">Buscar por tags</option>
-                                            </select>
-                                            <button type="submit" class="btn btn-info btn-lg">Buscar</button>
+                                                <br>
+                                            </div>
                                         </div>
+                                        {{/publicadas}}
+                                    <div class="col-md-3"></div>
+                                </div>
+                            </div>
+                            <div id="publicar" class="tab-pane fade">
+                                <br>
+                                <legend>¡Publica tu propia viñeta!</legend>
+                                <form action="action_page.php">
+                                    <label for="fname">Título</label>
+                                    <input type="text" id="fname" name="firstname">
+                                    <label for="lname">Comentario</label>
+                                    <input type="text" id="lname" name="lastname">
+                                    <label for="country">Tags</label>
+                                    <input type="text" id="tags" name="tags">
+                                    <label>Archivo</label>
+                                    <input type="file">
+                                    <input type="submit" value="Submit"> </form>
+                            </div>
+                            <div id="buscar" class="tab-pane fade">
+                                <h2>Búsqueda</h2>
+                                <div>
+                                    <div class="input-group col-md-12">
+                                        <input type="text" class="form-control input-lg" placeholder="¿Qué viñeta quieres buscar?" />
+                                        <select>
+                                            <option value="titulo">Buscar por título</option>
+                                            <option value="autor">Buscar por autor</option>
+                                            <option value="tags">Buscar por tags</option>
+                                        </select>
+                                        <button type="submit" class="btn btn-info btn-lg">Buscar</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!-- /.row -->
                 </div>
-                <!-- /.container-fluid -->
+                <!-- /.row -->
             </div>
-            <!-- /#page-wrapper -->
+            <!-- /.container-fluid -->
         </div>
-        <!-- /#wrapper -->
-        <!-- jQuery -->
-        <script src="/js/jquery.js"></script>
-        <!-- Bootstrap Core JavaScript -->
-        <script src="/js/bootstrap.min.js"></script>
+        <!-- /#page-wrapper -->
     </div>
+    <!-- /#wrapper -->
+    <!-- jQuery -->
+    <script src="../static/js/jquery.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../static/js/bootstrap.min.js"></script>
 </body>
 
 </html>
