agregado  href para login y signup. eliminado roles ya que no se usan.  modificado html index con lo que finalmente tendrán todos

--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/signup.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/signup.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<form action="registro" method="post">
+<form action="/signupuser" method="post">
  <p>Username</p>
  <input type='text' name='username'/> 
  <p>Password</p>
