--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/index.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/index.html
@@ -30,7 +30,32 @@
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
-                <li> <a id="btn-login" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-user"></span> Identificate</a> </li>
+	           	<li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Identificate <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="/login.html"><i class="fa fa-sign-in"></i> Log in </a>
+                        </li>
+
+                        <li class="divider"></li>
+                        <li>
+                            <a href="/signup.html"><i class="fa fa-sign-in"></i> Sign up</a>
+                        </li>
+                    </ul>
+                </li>
+           	     <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                        </li>
+
+                        <li class="divider"></li>
+                        <li>
+                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
