crear comentario hecho

--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/detalles.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/detalles.html
@@ -143,6 +143,7 @@
                                     <input class="form-control" placeholder="¿Qué tienes que decir?" type="text" name="comentario"> <span class="input-group-addon">
                                         <button type="submit"><i class="glyphicon glyphicon-pencil"></i> Enviar</button>
                                     </span> 
+                                    <input type="hidden" name="_csrf" value="{{token}}"/>           
                                 </form>
                                   </div>
                                	 <br> 
