adaptado todos los header para diferenciar entre anónimo y logrado

--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/index.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/index.html
@@ -16,7 +16,9 @@
     <link href="/css-based-on-template/navbar.css" rel="stylesheet" type="text/css">
     <!-- Custom Fonts -->
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+	<link href="/css-based-on-template/perfil/dashboard.css" rel="stylesheet" type="text/css">
+	<link href="/css-based-on-template/perfil/perfil.css" rel="stylesheet" type="text/css">
+	
 </head>
 
 <body>
