--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/tagIndex.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/tagIndex.html
@@ -16,6 +16,9 @@
     <link href="/css-based-on-template/navbar.css" rel="stylesheet" type="text/css">
     <!-- Custom Fonts -->
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="/css-based-on-template/perfil/dashboard.css" rel="stylesheet" type="text/css">
+	 <link href="/css-based-on-template/perfil/perfil.css" rel="stylesheet" type="text/css">
+	
 </head>
 
 <body>
@@ -28,8 +31,42 @@
                 <a class="navbar-brand" href="index.html"></a>
             </div>
             <!-- Top Menu Items -->
-            <ul class="nav navbar-right top-nav">
-                <li> <a id="btn-login" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-user"></span> Identificate</a> </li>
+<ul class="nav navbar-right top-nav">
+             	{{#anonymous}}
+	           	<li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Identificate <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="/login.html"><i class="fa fa-sign-in"></i> Log in </a>
+                        </li>
+
+                        <li class="divider"></li>
+                        <li>
+                            <a href="/signup.html"><i class="fa fa-sign-in"></i> Sign up</a>
+                        </li>
+                    </ul>
+                </li>
+                {{/anonymous}}
+                {{^anonymous}}
+           	     <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Mi perfil<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="/home"><i class="fa fa-fw fa-user"></i> Profile</a>
+                        </li>
+
+                        <li class="divider"></li>
+                        <li>
+                            
+                        </li>
+                         <li>             
+                        	<form action="/logout" method="post">
+                        		<input class="fa fa-fw fa-power-off" type="submit" value="Sign Out" />
+							</form>
+						</li>
+                    </ul>
+                </li>
+                {{/anonymous}}
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
