--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/perfil.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/perfil.html
@@ -34,43 +34,25 @@
                 <a class="navbar-brand" href="index.html"></a>
             </div>
             <!-- Top Menu Items -->
-             <ul class="nav navbar-right top-nav">
-             	{{#anonymous}}
-	           	<li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Identificate <b class="caret"></b></a>
+            <ul class="nav navbar-right top-nav"> {{#anonymous}}
+                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Identificate <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li>
-                            <a href="/login.html"><i class="fa fa-sign-in"></i> Log in </a>
-                        </li>
-
+                        <li> <a href="/login.html"><i class="fa fa-sign-in"></i> Log in </a> </li>
                         <li class="divider"></li>
+                        <li> <a href="/signup.html"><i class="fa fa-sign-in"></i> Sign up</a> </li>
+                    </ul>
+                </li> {{/anonymous}} {{^anonymous}}
+                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Mi perfil<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li> <a href="/home"><i class="fa fa-fw fa-user"></i> Profile</a> </li>
+                        <li class="divider"></li>
+                        <li> </li>
                         <li>
-                            <a href="/signup.html"><i class="fa fa-sign-in"></i> Sign up</a>
+                            <form action="/logout" method="post">
+                                <input class="fa fa-fw fa-power-off" type="submit" value="Sign Out" /> </form>
                         </li>
                     </ul>
-                </li>
-                {{/anonymous}}
-                {{^anonymous}}
-           	     <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Mi perfil<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="/home"><i class="fa fa-fw fa-user"></i> Profile</a>
-                        </li>
-
-                        <li class="divider"></li>
-                        <li>
-                            
-                        </li>
-                         <li>             
-                        	<form action="/logout" method="post">
-                        		<input class="fa fa-fw fa-power-off" type="submit" value="Sign Out" />
-							</form>
-						</li>
-                    </ul>
-                </li>
-                {{/anonymous}}
-            </ul>
+                </li> {{/anonymous}} </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
@@ -92,139 +74,82 @@
             <!-- /.navbar-collapse -->
         </nav>
     </div>
-        <div id="page-wrapper">
-            <div class="container-fluid">
-                <!-- Page Heading -->
-                <div class="row">
+    <div id="page-wrapper">
+        <div class="container">
+            <!-- Page Heading -->
+            <div class="row">
+                <div class="col-md-12">
                     <br>
                     <legend>Resumen de la cuenta</legend>
                 </div>
-                <div class="row">
-                    <div class="col-md-3 text-center"> <img class="img-responsive avatar-sombra" src="/">
-                        <h2 class="">{{usuario.username}}</h2>
-                        <p><i class="fa fa-envelope-o" aria-hidden="true"></i>{{usuario.email}}</p>
-                    </div>
-                    <div class="col-md-9">
-                        <ul class="nav nav-tabs">
-                            <li class="active"><a data-toggle="tab" href="#seguidos">Seguidos</a></li>
-                            <li><a data-toggle="tab" href="#vinetas">Viñetas de seguidos</a></li>
-                            <li><a data-toggle="tab" href="#favoritas">Viñetas favoritas</a></li>
-                            <li><a data-toggle="tab" href="#publicadas">Viñetas publicadas</a></li>
-                            <li><a data-toggle="tab" href="#publicar">Publicar una viñeta</a></li>
-                            <li><a data-toggle="tab" href="#buscar">Buscar una viñeta</a></li>
-                        </ul>
-                        <div class="tab-content">
-                            <div id="seguidos" class="tab-pane fade in active">
-                                <h3>Gente a la que sigues <span class="badge">4</span></h3>
-                                <hr>
-                                <div class="col-md-4">
-                                    {{#usuariosSeguidos}}
-                                    <div class="media">
-                                        <div class="media-left">
-                                            <a href="#"><img class="media-object avatar" src="/" alt="{{nombre}} avatar"></a>
-                                        </div>
-                                        <div class="media-body">
-                                            <h4 class="media-heading">{{nombre}}</h4>
-                                            <button class="btn btn-sm">Dejar de seguir</button>
-                                        </div>
-                                    </div>
-                                    {{/usuariosSeguidos}}
-                                </div>
-                            </div>
-                            <div id="vinetas" class="tab-pane fade">
-                                <h3>Viñetas de gente a la que sigues <span class="badge">3</span></h3>
-                                <hr>
-                                <div class="container-fluid">
-                                    <div class="col-md-9">
-                                        {{#vinetasSeguidores}}
-                                        <div class="jumbotron">
-                                            <p>Autor: <small><a href="#">{{autor}}</a></small></p>
-                                            <h1>{{titulo}}</h1> <img class="img-responsive" src="{{Url}}">
-                                            <p>{{descripcion}}</p>
-                                            <div id="categoria" class=""><small>Tags: <a href="/tag/{{tag}}">{{tag}}</a></small></div>
-                                            <div id="social" class="row">
-                                                <hr>
-                                                <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
-                                                <a href="details2.html">
-                                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
-                                                </a>
-                                                <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                                                    <div class="badge">30</div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 text-center"> <img width="150px" class="img-responsive avatar-sombra" src="https://gamersoutreach.org/files/brand-assets/avatar.jpg">
+                    <h2 class="">{{usuario.username}}</h2>
+                    <p><i class="fa fa-envelope-o" aria-hidden="true"></i>{{usuario.email}}</p>
+                </div>
+                <div class="col-md-9">
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a data-toggle="tab" href="#favoritas">Viñetas favoritas</a></li>
+                        <li><a data-toggle="tab" href="#publicadas">Viñetas publicadas</a></li>
+                        <li><a data-toggle="tab" href="#publicar">Publicar una viñeta</a></li>
+                        <li><a data-toggle="tab" href="#buscar">Buscar una viñeta</a></li>
+                    </ul>
+                    <div class="tab-content">
+                        <div id="favoritas" class="tab-pane fade">
+                            <h3>Viñetas favoritas <span class="badge">3</span></h3>
+                            <hr>
+                            <div class="container-fluid">
+                                <div class="col-md-9"> {{#favoritas}}
+                                    <div class="jumbotron">
+                                        <p>Autor: <small><a href="#">{{autor}}</a></small></p>
+                                        <h1>{{titulo}}</h1> <img class="img-responsive" src="{{Url}}">
+                                        <p>{{descripcion}}</p>
+                                        <div id="categoria" class=""><small>Tags: <a href="/tag/{{tag}}">{{tag}}</a></small></div>
+                                        <div id="social" class="row">
+                                            <hr>
+                                            <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                                            <a href="details2.html">
+                                                <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
+                                            </a>
+                                            <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
+                                                <div class="badge">30</div>
+                                            </button>
+                                            <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
+                                                <div class="badge">5</div>
+                                            </button>
+                                            <br>
+                                            <br> </div>
+                                    </div> {{/favoritas}} </div>
+                                <!--<div class="col-md-3"></div>--></div>
+                        </div>
+                        <div id="publicadas" class="tab-pane fade">
+                            <h3>Viñetas publicadas por ti <span class="badge">3</span></h3>
+                            <div class="container-fluid">
+                                <div class="col-md-12"> {{#usuario.viñetas}}
+                                    <div class="jumbotron">
+                                        <p>Autor: <small><a href="#">{{autor.username}}</a></small></p>
+                                        <h1>{{titulo}}</h1> <img class="img-responsive" src="{{URL}}">
+                                        <p>{{descripcion}}</p>
+                                        <div id="categoria" class=""><small>Tags: {{#tags}} <a href="/tag/{{nombre}}">{{nombre}}</a> {{/tags}} </small></div>
+                                        <div id="social" class="row">
+                                            <hr>
+                                            <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                                            <a href="details2.html">
+                                                <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
+                                            </a>
+                                            <button type="button" onclick="location.href='/likevineta/{{id}}'" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
+                                                <div class="badge">{{likes}}</div>
+                                            </button>
+                                            <Form action=d islikevineta/{{id}}>
+                                                <button type="submit" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
+                                                    <div class="badge">{{dislikes}}</div>
                                                 </button>
-                                                <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                                                    <div class="badge">5</div>
-                                                </button>
-                                                <br>
-                                                <br>
-                                            </div>
-                                        </div>
-                                        {{/vinetasSeguidores}}
-                                    </div>
-                                    <div class="col-md-3"></div>
-                                </div>
-                            </div>
-                            <div id="favoritas" class="tab-pane fade">
-                                <h3>Viñetas favoritas <span class="badge">3</span></h3>
-                                <hr>
-                                <div class="container-fluid">
-                                    <div class="col-md-9">
-                                        {{#favoritas}}
-                                        <div class="jumbotron">
-                                            <p>Autor: <small><a href="#">{{autor}}</a></small></p>
-                                            <h1>{{titulo}}</h1> <img class="img-responsive" src="{{Url}}">
-                                            <p>{{descripcion}}</p>
-                                            <div id="categoria" class=""><small>Tags: <a href="/tag/{{tag}}">{{tag}}</a></small></div>
-                                            <div id="social" class="row">
-                                                <hr>
-                                                <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
-                                                <a href="details2.html">
-                                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
-                                                </a>
-                                                <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                                                    <div class="badge">30</div>
-                                                </button>
-                                                <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                                                    <div class="badge">5</div>
-                                                </button>
-                                                <br>
-                                                <br>
-                                            </div>
-                                        </div>
-                                        {{/favoritas}}
-                                    </div>
-                                    <div class="col-md-3"></div>
-                                </div>
-                            </div>
-                            <div id="publicadas" class="tab-pane fade">
-                                <h3>Viñetas publicadas por ti <span class="badge">3</span></h3>
-                                <hr>
-                                <div class="container-fluid">
-                                    <div class="col-md-9">
-                                        {{#publicadas}}
-                                        <div class="jumbotron">
-                                            <p>Autor: <small><a href="#">{{autor}}</a></small></p>
-                                            <h1>{{titulo}}</h1> <img class="img-responsive" src="{{Url}}">
-                                            <p>{{descripcion}}</p>
-                                            <div id="categoria" class=""><small>Tags: <a href="/tag/{{tag}}">{{tag}}</a></small></div>
-                                            <div id="social" class="row">
-                                                <hr>
-                                                <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
-                                                <a href="details2.html">
-                                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
-                                                </a>
-                                                <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                                                    <div class="badge">30</div>
-                                                </button>
-                                                <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                                                    <div class="badge">5</div>
-                                                </button>
-                                                <br>
-                                                <br>
-                                            </div>
-                                        </div>
-                                        {{/publicadas}}
-                                    <div class="col-md-3"></div>
-                                </div>
+                                            </Form>
+                                            <br>
+                                            <br> </div>
+                                    </div> {{/usuario.viñetas}}
+                                    <!--<div class="col-md-3"></div>--></div>
                             </div>
                             <div id="publicar" class="tab-pane fade">
                                 <br>
